# OutLander

./: .gitignore  CMakeLists.txt  README.org  README.txt  debugargs.txt
src/: CMakeLists.txt  ol.cpp  ol.cxx  olc.cxx  olcl.cxx  olcl.hxx  oll.cpp  oll.cxx  oll.hpp  oll.hxx  ols.cxx  olsl.cxx  olsl.hxx  trainingSite.cxx  trainingSitesContainer.cxx
src/app/: CMakeLists.txt  olc.cxx  olp.py  ols.cxx
src/lib/: CMakeLists.txt  olsl.hxx  trainingSite.cxx
src/man/: CMakeLists.txt  olc.1
src/oll/: CMakeLists.txt  classStatistics.cxx  olcl.cxx  olcl.hxx  olsl.cxx  trainingSitesContainer.cxx
