PROJECT(OutLander)
cmake_minimum_required(VERSION 2.6)

FIND_PACKAGE(OTB)
IF(OTB_FOUND)
INCLUDE(${OTB_USE_FILE})
ELSE(OTB_FOUND)
MESSAGE(FATAL_ERROR
"Cannot build OTB project without OTB.
 Please set OTB_DIR.")
ENDIF(OTB_FOUND)

FIND_PACKAGE(ITK)
IF(ITK_FOUND)
INCLUDE(${ITK_USE_FILE})
ELSE(ITK_FOUND)
MESSAGE(FATAL_ERROR
"Cannot build ITK project without ITK.
 Please set ITK_DIR.")
ENDIF(ITK_FOUND)

ADD_SUBDIRECTORY(src)
